<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <TextView
        android:id="@+id/lbl_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/categories"
        android:layout_alignParentLeft="true"
        android:paddingRight="20dp"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/lbl_category"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/lbl_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amount"
        android:layout_alignParentLeft="true"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categories"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/categories"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentLeft="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/amount"
        android:layout_alignLeft="@+id/categories"
        android:layout_marginTop="25dp"
        android:onClick="buttonClicked" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="buttonClicked"
        android:text="@string/ok" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/ok"
        android:onClick="buttonClicked"
        android:text="@string/cancel" />

</RelativeLayout>